--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,12 @@
-*{
+* {
     box-sizing: border-box;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-body{
-    background-image: url(img/Background.png);
+
+body {
+    background-image: url(../img/Background.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -14,41 +15,46 @@ body{
     height: 100%;
     position: relative;
 }
-#formulario{
+
+#formulario {
     background-color: rgba(255, 255, 255, 0.8);
     flex-direction: column;
     border-radius: 5px;
     border: 1px solid #715aff;
     position: absolute;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-32%, 25%);
     width: 700px;
-    padding:60px;
+    padding: 60px;
 
 
 }
-.isotipo{
+
+.isotipo {
     height: 100px;
     width: 100px;
     margin: auto;
 }
-form{
+
+form {
     display: flex;
     flex-direction: column;
 }
-form label{
+
+form label {
     font-size: 27px;
     margin: 10px 0px;
 }
 
-.entrada-form{
+.entrada-form {
     padding: 9px;
     background-color: rgb(250, 250, 250);
     border: none;
     box-shadow: 1px 0.5px;
 }
-#ingresar-btn{
+
+#ingresar-btn {
     margin: auto;
     width: 60%;
     border: 0.5px solid black;
@@ -60,36 +66,40 @@ form label{
     cursor: pointer;
 
 }
-#ingresar-btn:hover{
+
+#ingresar-btn:hover {
     background-color: #5840f8;
 }
-#ctn-img{
-    text-align:center;
+
+#ctn-img {
+    text-align: center;
 }
 
-p{
+p {
     color: #715aff;
-    margin:10px 0px;
+    margin: 10px 0px;
     cursor: pointer;
     font-weight: 400;
 }
-#side-bar{
-    position:fixed;
+
+#side-bar {
+    position: fixed;
     display: flex;
     width: 200px;
     height: 100%;
     left: 0;
     top: 0;
-    transform: translate(0px,0px);
+    transform: translate(0px, 0px);
     background-color: rgba(255, 255, 255, 0.7);
-    padding: 15px;    
+    padding: 15px;
     align-items: flex-end;
 }
 
-#ctn-btn{
+#ctn-btn {
     display: inline-block;
 }
-#ctn-btn button{
+
+#ctn-btn button {
     width: 85%;
     height: 40px;
     margin: 5px 15px;
@@ -97,8 +107,8 @@ p{
     border-radius: 5px;
     cursor: pointer;
 }
-#ctn-btn button:hover{
-    background-color: #715aff;
-    color:white;
-}
 
+#ctn-btn button:hover {
+    background-color: #715aff;
+    color: white;
+}
