--- a/css/calendario.css
+++ b/css/calendario.css
@@ -38,7 +38,7 @@ header .icons span{
   margin-right: -10px;
 }
 header .icons span:hover{
-  background: #f2f2f2;
+  color: black
 }
 header .current-date{
   font-size: 1rem;
