--- a/css/syle.css
+++ b/css/syle.css
@@ -35,6 +35,7 @@
 /* ---------------------------------------- */
 
 .nav {
+    position: fixed;
     background: var(--primary-bg);
     color: var(--primary-text);
     display: flex;
@@ -44,10 +45,11 @@
     gap: 2rem;
     padding: 1rem .5rem;
     transition: width 1s;
+    height: 100vh;
 }
 
 .nav__open{
-    width: 50% !important;
+    width: 60% !important;
 }
 
 .nav__icon{
@@ -112,8 +114,8 @@
 /* ---------------------------------------- */
 
 .content {
-    padding: 1rem 0;
-    width: auto;
+    width: 80%;
+    margin-left: 20%;
 }
 
 .content__title{
